Added home page design

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <title></title>
 
         <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+        <link href="css/ionicons.min.css" rel="stylesheet">
+        <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
 
         <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
@@ -14,28 +16,16 @@
 
         <!-- ionic/angularjs js -->
         <script src="lib/ionic/js/ionic.bundle.js"></script>
+        <script src="lib/ionic/js/angular-ui/ui-bootstrap-tpls-1.1.2.min.js"></script>
 
         <!-- cordova script (this will be a 404 during development) -->
         <script src="cordova.js"></script>
 
         <!-- your app's js -->
+        <script src="js/controllers.js"></script>
         <script src="js/app.js"></script>
     </head>
     <body ng-app="cloudrexx">
-        <ion-pane>
-            <ion-content scroll="false" ng-controller="UploaderCtrl">
-                <div class="row cloudrexx-logo">
-                    <div class="col"><img class="cloud-logo" src="img/logo.svg" /></div>
-                </div>
-                <div class="row blue-cloud">
-                    <div class="col">
-                        <img class="cloud-image" src="img/cloud.png" />
-                        <div class="btn-abs">
-                            <button ng-click="" class="button cloud-image-upload">Upload Image</button>
-                        </div>
-                    </div>
-                </div>
-            </ion-content>
-        </ion-pane>
+        <ion-nav-view></ion-nav-view>
     </body>
 </html>
