Added translation module.

--- a/index.html
+++ b/index.html
@@ -14,8 +14,16 @@
         <link href="css/ionic.app.css" rel="stylesheet">
         -->
 
+        <!-- add translation js files-->
+        <script>
+            var translations = {};
+        </script>
+        <script src="translation/en.js"></script>
+        <script src="translation/de.js"></script>
+
         <!-- ionic/angularjs js -->
         <script src="lib/ionic/js/ionic.bundle.js"></script>
+        <script src="lib/angular-translate/angular-translate.min.js"></script>
         <script src="lib/ionic/js/angular-ui/ui-bootstrap-tpls-1.1.2.min.js"></script>
 
         <!-- cordova script (this will be a 404 during development) -->
