--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <!-- ionic/angularjs js -->
         <script src="lib/ionic/js/ionic.bundle.js"></script>
         <script src="lib/angular-translate/angular-translate.min.js"></script>
+        <script src="lib/ngStorage/ngStorage.min.js"></script>
         <script src="lib/ionic/js/angular-ui/ui-bootstrap-tpls-1.1.2.min.js"></script>
 
         <!-- cordova script (this will be a 404 during development) -->
@@ -31,6 +32,7 @@
 
         <!-- your app's js -->
         <script src="js/controllers.js"></script>
+        <script src="js/services.js"></script>
         <script src="js/app.js"></script>
     </head>
     <body ng-app="cloudrexx">
