--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <script src="cordova.js"></script>
 
         <!-- your app's js -->
+        <script src="js/config.js"></script>
         <script src="js/controllers.js"></script>
         <script src="js/services.js"></script>
         <script src="js/app.js"></script>
